--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Articles</h1>
 
+<%= link_to "Create new article",  new_article_path %>
+
 <% @articles.each do |article| %>
-  <h2><%= article.title %></h2>
+  <h2><%= link_to article.title, article_path(article.id)%></h2>
   <p><%= article.content %></p>
 <% end %>
+
+
